--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 build/
+*.egg-info/
+
+##################################
+Worklog Specific Ignores
+##################################
+
+# Ignore Worklog directory by default
+.worklog/
+
+# Keep defaults and plugins tracked
+!.worklog/config.defaults.yaml
+!.worklog/plugins/
+!.worklog/plugins/**
+
+# opencode temporary files
+.opencode/tmp/
+
+### End of Worklog Specific Ignores
+
+# Ignore compiled python files
+__pycache__
