G1-0MLBZGURJ0G0OLNW: Update CI to use isort with black profile for import ordering

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run style checks (black / isort)
         run: |
           black --check .
-          isort --check-only .
+          isort --profile black --check-only .
 
       - name: Run tests with coverage
         run: |
