G1-0MLAIE2RY1UOZ9HQ: Set PRODUCTION env in nightly release workflow to mark release builds

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -10,6 +10,10 @@ jobs:
   nightly:
     name: Nightly release (midnight UTC)
     runs-on: ubuntu-latest
+    env:
+      # Mark this run as a production/release build so runtime code can disable
+      # worklog creation and other development-only behaviours.
+      PRODUCTION: "true"
     permissions:
       contents: write
       packages: write
