--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -56,6 +56,9 @@ jobs:
             echo "EOF" >> $GITHUB_OUTPUT
           fi
 
+      - name: Install pygame
+        run: pip install pygame
+
       - name: Run tests (pytest)
         id: tests
         run: |
@@ -71,7 +74,7 @@ jobs:
             fi
           else
             echo "No Python project detected – nothing to test"
-          fi
+            fi
 
       - name: Build release artifact
         id: build
