G1-0MLHNKR2M098FNXC: Create PyInstaller config and fix DEFAULT_ICON_PATH bug
- Created classic-arcade.spec for PyInstaller cross-platform builds
- Added requirements-dev.txt with PyInstaller and build dependencies
- Updated pyproject.toml with dev dependencies and package-data config
- Created MANIFEST.in to include all assets in source distribution
- Fixed bug in engine.py where DEFAULT_ICON_PATH not defined when icons missing

Build tested successfully - produces 39MB standalone executable on Linux.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,10 @@
 include README.md
-include LICENSE
+include requirements.txt
+include requirements-dev.txt
+recursive-include games **/*.wav
+recursive-include games **/*.mp3
+recursive-include games **/*.ogg
+recursive-include games **/*.png
+recursive-include games **/*.jpg
+recursive-include games **/*.gif
+recursive-include assets **/*
