--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ __pycache__
 # Local settings file (user-specific) should not be committed
 settings.json
 highscore_*.json
+classic-arcade.log
 
 # Virtual environments
 .venv*/
