Add multi-alien type support per wave
- Updated level.yaml configs to use mod names as alien type identifiers
- Added loader.load_all_mods() call to load all mods at startup
- Fixed _load_mods and _load_next_wave to load all mods for multi-type support
- Wave 1: 4 rows x 8 cols (32 aliens)
- Wave 2: 5 rows x 7 cols (35 aliens) with 2 alien types
- Wave 3: 6 rows x 6 cols (36 aliens) with 3 alien types

Each wave now supports multiple alien types based on probability weights:
- Wave 1: Single type (default)
- Wave 2: 2 types (blue_wave 60%, default 40%)
- Wave 3: 3 types (default 40%, green_sniper 35%, blue_wave 25%)

--- a/mods/blue_wave/level.yaml
+++ b/mods/blue_wave/level.yaml
@@ -1,4 +1,5 @@
 # Blue Wave level configuration
+# Wave 2: Two alien types (Blue and Green)
 rows: 5
 columns: 7
 alien_spacing:
@@ -6,7 +7,9 @@ alien_spacing:
   vertical: 12
 aliens:
   - type: "blue_wave"
-    probability: 1.0
+    probability: 0.6
+  - type: "default"
+    probability: 0.4
 alien_size:
   width: 45
   height: 35
