Fix row-specific alien type selection
- YAML format changed to specify alien type per row using 'row' key
- Level loader now uses row-specific alien types from config
- Wave 1: All rows use DefaultAlien (green)
- Wave 2: Rows 0,2 use BlueWaveAlien (blue), Rows 1,3 use DefaultAlien (green)
- Wave 3: Rows 0,2 use GreenSniperAlien (red), Rows 1,3 use BlueWaveAlien (blue)

Before: Random weighted selection per row
After: Fixed row-specific alien types from YAML config

--- a/mods/blue_wave/level.yaml
+++ b/mods/blue_wave/level.yaml
@@ -6,10 +6,14 @@ alien_spacing:
   horizontal: 5
   vertical: 5
 aliens:
-  - type: "blue_wave"
-    probability: 0.6
-  - type: "default"
-    probability: 0.4
+  - row: 0
+    type: "blue_wave"
+  - row: 1
+    type: "default"
+  - row: 2
+    type: "blue_wave"
+  - row: 3
+    type: "default"
 alien_size:
   width: 45
   height: 35
